# rust-code-copier

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.sh  package-lock.json  package.json  tsconfig.json
src/: extension.ts  main.rs
