[package]
name = "rust-code-copier"
version = "0.1.0"
edition = "2021"
description = "A VS Code extension for copying Rust project files to clipboard with LLM-friendly formatting"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
walkdir = "2.4.0"
toml = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"


[target.'cfg(not(windows))'.dependencies]
clipboard = "0.5.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.0"

[profile.release]
opt-level = 3
lto = true
